# flask-website

./: .gitignore  README.md  config.py  pyproject.toml
website/: __init__.py  auth.py  models.py  site.py
website/static/css/: index.css
website/static/js/: index.js
website/templates/: base.html
website/templates/auth/: login.html  sign_up.html
website/templates/site/: home.html
